--- a/environment.yml
+++ b/environment.yml
@@ -104,6 +104,7 @@ dependencies:
       - libclang==16.0.0
       - librosa==0.7.2
       - llvmlite==0.32.1
+      - magenta==2.1.4
       - markdown==3.4.3
       - markupsafe==2.1.2
       - marshmallow==3.19.0
@@ -111,6 +112,7 @@ dependencies:
       - mido==1.2.6
       - mir-eval==0.7
       - networkx==2.6.3
+      - note-seq==0.0.3
       - numba==0.49.1
       - numpy==1.21.6
       - oauthlib==3.2.2
@@ -151,6 +153,7 @@ dependencies:
       - tensorboard==2.9.1
       - tensorboard-data-server==0.6.1
       - tensorboard-plugin-wit==1.8.1
+      - tensorflow==2.9.1
       - tensorflow-datasets==4.6.0
       - tensorflow-estimator==2.9.0
       - tensorflow-io-gcs-filesystem==0.32.0
